# tracing

./: Dockerfile  Dockerfile.server  README.md  docker-compose.yml  pricing.yaml  pyproject.toml  test_api_full.py  tracing_sdk.pth
tests/: test_adapter.py  test_api.py  test_api_full_pytest.py  test_refactor.py
tests/integration/: test_sdk_only.py  test_two_projects.py
tracing-dashboard/: .dockerignore  .env  CHANGELOG.md  Dockerfile  PRODUCT.md  ROADMAP.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tracing-dashboard/.impeccable/critique/: tracing-dashboard--2026-06-17T00-09-31-238Z.json
tracing-dashboard/public/: ws-test.html
tracing-dashboard/src/: App.tsx  index.css
tracing-dashboard/src/__tests__/: CostView.test.tsx  Dropdown.test.tsx  SpanDetailPanel.test.tsx  WaterfallView.test.tsx  trace-utils.test.ts
tracing-dashboard/src/components/: AgentFlow.tsx  CallTrendChart.tsx  CommandPalette.tsx  ComparisonView.tsx  CostView.tsx  Dropdown.tsx  DurationHistogram.tsx  EmptyState.tsx  ErrorBoundary.tsx  (+29 more)
tracing_sdk/: README.md  __init__.py  auto_patch.py  collector.py  span.py  tracer.py
tracing_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tracing_sdk/adapters/: __init__.py  crewai_adapter.py  openai_adapter.py
tracing_server/: __init__.py  __main__.py  app.py  auth.py  models.py  storage.py  store.py
tracing_server/routers/: __init__.py  admin.py  analytics.py  ingest.py  query.py  share.py  sse.py
tracing_ui/: index.ts
tracing_ui/src/: TraceViewer.tsx
(+9 files in other folders)
