[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracing-sdk"
version = "0.1.0"
description = "Zero-code auto-instrumentation tracing for AI agent frameworks"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]"]

[tool.setuptools.packages.find]
include = ["tracing_sdk*", "tracing_server*"]

[project.scripts]
trace-server = "tracing_server.__main__:main"


